--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-      "tailwind": "npx tailwind -i src/style.css -o dist/style.css --watch"
+      "tailwind": "npx tailwind -i assets/src/style.css -o assets/dist/style.css --watch"
   },
   "author": "",
   "license": "ISC",
